daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N26_bad_leak_value/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae301584065f6369e1a050f7b7fd853a641c79691856f4d0fbc8b768b855ea92ae528a867dfe409a8b2d8ac9873634045be484d9df1c533faa666488acef0770f9b3c0cdd01f602f6
